@@ -3,24 +3,19 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>com.vaadin</groupId>
+    <artifactId>vaadin-spreadsheet-directorypackage</artifactId>
+    <version>3.0-SNAPSHOT</version>
+  </parent>
   <groupId>com.vaadin</groupId>
   <artifactId>flow-gwtexporter</artifactId>
-  <version>3.0-SNAPSHOT</version>
-
-  <packaging>war</packaging>
-  <name>Flow Port GWT Addon Exporter</name>
+  <packaging>jar</packaging>
 
   <properties>
-    <!-- Convenience property to set the GWT version -->
-    <gwt.version>2.8.2</gwt.version>
-
-    <!-- GWT 2.9 support 8, 9 and 11 -->
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-    <jetty.version>9.3.7.v20160115</jetty.version>
+    <gwt.target>GwtAddonExporter.html</gwt.target>
+    <gwt.module>com.vaadin.spreadsheet.flowport.gwtexporter.GwtExporter</gwt.module>
+    <gwt.hostedWebapp>${project.build.directory}/${project.build.finalName}</gwt.hostedWebapp>
   </properties>
 
   <dependencyManagement>
@@ -39,81 +34,62 @@
     <dependency>
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-servlet</artifactId>
-      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-user</artifactId>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.google.gwt</groupId>
       <artifactId>gwt-dev</artifactId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.2</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>1.10.19</version>
     </dependency>
 
     <dependency>
       <groupId>com.vaadin</groupId>
       <artifactId>vaadin-spreadsheet</artifactId>
-      <version>3.0-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
+
+    <!-- TODO We should depend only on flow-client and gwt -->
+    <!-- Used in ApplicationConfiguration & ApplicationConnection & ConnectorBundleLoaderFactory -->
     <dependency>
       <groupId>com.vaadin</groupId>
       <artifactId>vaadin-client</artifactId>
-      <version>8.12.2</version>
     </dependency>
+    <!-- ConnectorBundleLoaderFactory uses ConnectorBundle -->
     <dependency>
       <groupId>com.vaadin</groupId>
       <artifactId>vaadin-client-compiler</artifactId>
-      <version>8.12.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
     </dependency>
   </dependencies>
 
   <build>
     <!-- Output classes directly into the webapp, so that IDEs and "mvn process-classes" update them in DevMode -->
     <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>
-
+    <!-- Add source and resource files to artifact -->
+    <resources>
+      <resource>
+        <directory>${basedir}/src/main/java</directory>
+      </resource>
+      <resource>
+        <directory>${basedir}/src/main/resources</directory>
+      </resource>
+    </resources>
     <plugins>
 
-      <!-- Mojo's Maven Plugin for GWT -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>gwt-maven-plugin</artifactId>
-        <version>2.8.2</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>compile</goal>
-              <goal>test</goal>
-              <goal>generateAsync</goal>
-            </goals>
-          </execution>
-        </executions>
-        <!-- Plugin configuration. There are many available options, see
-          gwt-maven-plugin documentation at codehaus.org -->
-        <configuration>
-          <runTarget>GwtAddonExporter.html</runTarget>
-          <modules>
-            <module>com.vaadin.spreadsheet.flowport.gwtexporter.GwtExporter</module>
-          </modules>
-          <generateJsInteropExports>true</generateJsInteropExports>
-          <style>pretty</style>
-          <extraJvmArgs>-Xmx1g -Xms1g -XX:MaxPermSize=512m</extraJvmArgs>
-          <!--
-          <draftCompile>true</draftCompile>
-          -->
-        </configuration>
       </plugin>
 
       <plugin>
